# monitoring-dashboard-test

./: README.md
back/: .gitignore  Cargo.toml  Dockerfile  README.md
back/src/: main.rs
back/src/application/: mod.rs  os.rs
back/src/domain/os/: model.rs
back/src/infrastructure/: mod.rs
front/: .eslintrc  babel.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
front/public/: index.html
front/src/: App.module.scss  App.tsx  react-app-env.d.ts  saga.ts  store.ts  storeTypes.ts
front/src/application/AlertingEvents/component/: AlertingEvents.tsx
front/src/application/CPULoads/components/: CPULoadChart.tsx
front/src/application/CPULoads/hooks/: useCPULoad.ts
front/src/components/EventTable/: EventRow.module.scss  EventRow.stories.tsx  EventRow.tsx  EventTable.module.scss  EventTable.stories.tsx  EventTable.tsx  StatusChips.module.scss  StatusChips.stories.tsx  StatusChips.tsx
front/src/components/TimeseriesChart/: TimeseriesChart.stories.tsx  TimeseriesChart.tsx
front/src/components/TitleBar/: TitleBar.module.scss  TitleBar.tsx
front/src/domains/Alerting/: actionsCreator.ts  reducer.test.ts  reducer.ts  saga.ts  selector.ts
front/src/domains/Alerting/__snapshots__/: reducer.test.ts.snap
front/src/domains/Alerting/api/: alertingstate.test.ts  alertingstate.ts
front/src/domains/Alerting/hooks/: useAlerts.ts
front/src/domains/CPULoad/: actionsCreator.ts  reducer.ts  saga.ts  selector.ts  service.ts
front/src/infrastructure/: apiRoutes.ts  logger.saga.ts
front/tests/: jest.setup.js
(+10 files in other folders)
