[package]
name = "monitoring-api"
version = "0.1.0"
authors = ["Anthony Griffon <an.griffon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
colored = "1.9.2"
dotenv = "0.15.0"
frank_jwt = "3.1.2"
log = "0.4.8"
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"
sys-info = "0.5"
uuid = { version = "0.7", features = ["serde"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "uuid"]
